--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GSONApplication"
+        android:theme="@style/Theme.EtomatoAssignment"
         android:usesCleartextTraffic="true">
         <activity
             android:name="com.etomato.assignment.MainActivity"
