--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
             android:exported="true" />
         <activity
             android:name=".GSON.RetrofitActivity"
