--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+//    id 'com.google.gms.google-services'
 }
 apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 31
@@ -52,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     //FCM
     implementation 'com.google.firebase:firebase-messaging'
+    implementation "com.google.firebase:firebase-core:19.0.1"
     //DB
     implementation 'com.google.firebase:firebase-database'
     //타임라인뷰
