--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-//    id 'com.google.gms.google-services'
+    id 'com.google.gms.google-services'
 }
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
@@ -40,11 +40,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'androidx.work:work-runtime:2.6.0'
+    implementation 'com.google.android.gms:play-services-nearby:18.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
     implementation 'com.squareup.retrofit2:retrofit:2.6.4'
     implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
