--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.etomato.assignment">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,16 +14,19 @@
         android:theme="@style/Theme.EtomatoAssignment"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Test.InfiniteViewPager.InfiniteActivity"
+            android:exported="true" />
+        <activity
             android:name=".Test.GridActivity"
             android:exported="true" />
         <activity
             android:name=".Main.View.Activity.ArticleActivity"
-            android:theme="@style/Theme.Design.NoActionBar"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.Design.NoActionBar" />
         <activity
             android:name=".Main.View.Activity.ViewPagerActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="true">
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,12 +34,13 @@
             </intent-filter>
         </activity>
 
-     <service android:name=".Main.Service.MyFirebaseMessagingService"
-              android:exported="false">
-        <intent-filter>
-            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-        </intent-filter>
-    </service>
+        <service
+            android:name=".Main.Service.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
