--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,6 @@ dependencies {
     implementation "com.google.firebase:firebase-core:19.0.1"
     //DB
     implementation 'com.google.firebase:firebase-database'
-    //타임라인뷰
-    implementation 'com.github.vipulasri:timelineview:1.1.5'
+    //ADmob
+    implementation 'com.google.android.gms:play-services-ads:20.3.0'
 }
